@@ -18,6 +18,7 @@
 - add support for the "%" hack for case insensitive attribute schemas.
 - fix "nosymlink" option handling and add desription to man page.
 - fix don't fail on empty master map.
+- if there's no "automount" entry in nsswitch.conf use "files" source.
 
 18/06/2007 autofs-5.0.2
 -----------------------
